add Python 2 kernel and notebook

--- a/roslab.yaml
+++ b/roslab.yaml
@@ -22,8 +22,11 @@ pip:
   - tensorflow-gpu==1.2
   - opencv-python
   - pillow
-  - ipython
+  - ipython==5.8.0
+  - ipykernel==4.10.0
+  - tornado==5.1.1
 
 custom:
+  - python2 -m ipykernel install
   - cd $HOME/objectattention/rpn_net/util/faster_rcnn_lib
   - make
